tests/files/flow_controller_tests/should_run/079.cmdr
x = 10;
print sinh(x);