tests/files/flow_controller_tests/should_fail/059.cmdr
x = "cat";
print sinh(x);